examples/test-folder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: argo-kapcom-test
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-demo-2
